--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>校园二手市场 - 首页</title>
-    <!-- 引入Font Awesome图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         :root {
@@ -15,9 +14,8 @@
             --text-color-light: #888;
             --price-color: #e74c3c;
             --favorite-color: #ffc107;
-            --right-sidebar-width: 120px; /* 右侧固定菜单宽度 */
+            --right-sidebar-width: 120px;
         }
-
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             background-color: var(--light-gray);
@@ -25,14 +23,11 @@
             padding-right: var(--right-sidebar-width);
             color: var(--text-color);
         }
-
         .page-container {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
-
-        /* 顶部固定区域 */
         .header-container {
             padding: 15px 25px;
             background-color: #fff;
@@ -41,29 +36,26 @@
             top: 0;
             z-index: 1000;
             display: grid;
-            grid-template-columns: 1fr auto 1fr; /* 左-中-右三列布局 */
+            grid-template-columns: 1fr auto 1fr;
             align-items: center;
             gap: 20px;
         }
-
         .header-title {
             grid-column: 1 / 2;
-            justify-self: start; /* 左对齐 */
+            justify-self: start;
             font-size: 1.8rem;
             font-weight: bold;
             margin: 0;
             white-space: nowrap;
             margin-left: 60px;
         }
-
         .search-and-filters {
-            grid-column: 2 / 3; /* 搜索和筛选放在中间一列 */
+            grid-column: 2 / 3;
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 10px;
         }
-
         .search-bar {
             display: flex;
             align-items: center;
@@ -76,12 +68,7 @@
             border: 1px solid var(--border-color);
             box-sizing: border-box;
         }
-
-        .search-bar i {
-            color: #999;
-            margin-right: 10px;
-        }
-
+        .search-bar i { color: #999; margin-right: 10px; }
         .search-bar input {
             border: none;
             background: transparent;
@@ -89,7 +76,6 @@
             outline: none;
             font-size: 1rem;
         }
-
         .filter-buttons-wrapper {
             display: flex;
             align-items: center;
@@ -97,11 +83,7 @@
             gap: 15px;
             position: relative;
         }
-
-        .filter-btn-container {
-            position: relative;
-        }
-
+        .filter-btn-container { position: relative; }
         .filter-btn {
             background: #fff;
             border: 1px solid #ddd;
@@ -111,11 +93,7 @@
             font-size: 0.9rem;
             white-space: nowrap;
         }
-        .filter-btn:hover {
-            background-color: #f8f8f8;
-        }
-
-        /* 下拉菜单样式 */
+        .filter-btn:hover { background-color: #f8f8f8; }
         .dropdown-menu {
             position: absolute;
             top: calc(100% + 5px);
@@ -133,29 +111,15 @@
             transition: opacity 0.2s, transform 0.2s;
             transform-origin: top center;
         }
-
-        .dropdown-menu.show {
-            display: block;
-            opacity: 1;
-        }
-
+        .dropdown-menu.show { display: block; opacity: 1; }
         .dropdown-item {
             padding: 10px 20px;
             cursor: pointer;
             font-size: 0.9rem;
             white-space: nowrap;
         }
-
-        .dropdown-item:hover {
-            background-color: #f8f9fa;
-        }
-
-        .dropdown-item.active {
-            font-weight: bold;
-            color: var(--primary-color);
-        }
-
-        /* 主内容区域 */
+        .dropdown-item:hover { background-color: #f8f9fa; }
+        .dropdown-item.active { font-weight: bold; color: var(--primary-color); }
         .main-content {
             padding: 20px;
             flex-grow: 1;
@@ -164,13 +128,11 @@
             width: 100%;
             box-sizing: border-box;
         }
-
         .product-list {
             display: flex;
             flex-direction: column;
             gap: 15px;
         }
-
         .product-item {
             display: flex;
             align-items: center;
@@ -180,7 +142,6 @@
             padding: 15px;
             gap: 20px;
         }
-
         .product-item-image {
             width: 120px;
             height: 120px;
@@ -189,7 +150,6 @@
             object-fit: cover;
             background-color: var(--light-gray);
         }
-
         .product-item-details {
             display: flex;
             flex-direction: column;
@@ -197,7 +157,6 @@
             min-width: 0;
             gap: 6px;
         }
-
         .product-item-title {
             font-size: 1.1rem;
             font-weight: 600;
@@ -207,7 +166,6 @@
             -webkit-box-orient: vertical;
             overflow: hidden;
         }
-
         .product-item-meta-info {
             font-size: 0.85rem;
             color: var(--text-color-light);
@@ -215,17 +173,12 @@
             flex-direction: column;
             gap: 4px;
         }
-
-        .seller-location-info .seller-name {
-            margin-right: 15px;
-        }
-
+        .seller-location-info .seller-name { margin-right: 15px; }
         .product-item-price {
             font-size: 1.3rem;
             font-weight: bold;
             color: var(--price-color);
         }
-
         .product-item-favorite {
             display: flex;
             flex-direction: column;
@@ -233,7 +186,6 @@
             justify-content: center;
             align-self: stretch;
         }
-
         .favorite-btn {
             background: none;
             border: none;
@@ -242,16 +194,8 @@
             cursor: pointer;
             padding: 5px;
         }
-        .favorite-btn.favorited {
-            color: var(--favorite-color);
-        }
-
-        .favorite-count {
-            font-size: 0.75rem;
-            color: var(--text-color-light);
-        }
-
-        /* 右侧固定菜单栏 */
+        .favorite-btn.favorited { color: var(--favorite-color); }
+        .favorite-count { font-size: 0.75rem; color: var(--text-color-light); }
         .right-sidebar {
             position: fixed;
             top: 0;
@@ -268,7 +212,6 @@
             z-index: 999;
             box-sizing: border-box;
         }
-
         .sidebar-item {
             display: flex;
             flex-direction: column;
@@ -277,8 +220,8 @@
             color: var(--text-color);
             margin-bottom: 25px;
         }
-
         .sidebar-item .icon-wrapper {
+            position: relative;
             width: 60px;
             height: 60px;
             border: 1px solid var(--border-color);
@@ -291,36 +234,38 @@
             transition: background-color 0.2s, color 0.2s;
             overflow: hidden;
         }
-
+        .notification-dot {
+            position: absolute;
+            top: 2px;
+            right: 2px;
+            width: 10px;
+            height: 10px;
+            background-color: #e74c3c;
+            border-radius: 50%;
+            border: 2px solid #fff;
+            display: none;
+        }
         .sidebar-avatar {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
-
-        .sidebar-item span {
-            font-size: 0.9rem;
-            font-weight: 500;
-        }
-
+        .sidebar-item span { font-size: 0.9rem; font-weight: 500; }
         .sidebar-item:hover .icon-wrapper {
             background-color: var(--primary-color);
             color: #fff;
             border-color: var(--primary-color);
         }
-
         .product-item-link {
             text-decoration: none;
-            color: inherit; /* 继承父元素的颜色 */
-            display: block; /* 使 a 标签成为块级元素 */
+            color: inherit;
+            display: block;
         }
-
     </style>
 </head>
 <body>
 
 <div class="page-container">
-    <!-- 1. 顶部固定区域 -->
     <header class="header-container">
         <h1 class="header-title">校园二手市场</h1>
         <div class="search-and-filters">
@@ -329,7 +274,6 @@
                 <input type="text" placeholder="搜索商品">
             </div>
             <div class="filter-buttons-wrapper">
-                <!-- 排序按钮和下拉菜单 -->
                 <div class="filter-btn-container">
                     <button class="filter-btn" id="sort-btn">最新发布 <i class="fa-solid fa-caret-down"></i></button>
                     <div class="dropdown-menu" id="sort-menu">
@@ -339,7 +283,6 @@
                         <div class="dropdown-item" data-value="favorites">最多收藏</div>
                     </div>
                 </div>
-                <!-- 筛选品类按钮和下拉菜单 -->
                 <div class="filter-btn-container">
                     <button class="filter-btn" id="category-btn">全部品类 <i class="fa-solid fa-caret-down"></i></button>
                     <div class="dropdown-menu" id="category-menu">
@@ -355,20 +298,16 @@
                 </div>
             </div>
         </div>
-        <!-- 右侧空白占位符，用于平衡布局 -->
         <div></div>
     </header>
 
-    <!-- 2. 商品列表 -->
     <main class="main-content">
         <div class="product-list" id="product-list-container">
-            <!-- 商品项将由JavaScript动态生成 -->
             <p id="loading-message">正在加载商品...</p>
         </div>
     </main>
 </div>
 
-<!-- 3. 右侧固定菜单栏 -->
 <aside class="right-sidebar">
     <a href="/profile.html" class="sidebar-item">
         <div class="icon-wrapper">
@@ -388,8 +327,11 @@
         <div class="icon-wrapper"><i class="fa-regular fa-star"></i></div>
         <span>我的收藏</span>
     </a>
-    <a href="/chat.html" class="sidebar-item">
-        <div class="icon-wrapper"><i class="fa-regular fa-comment-dots"></i></div>
+    <a href="/chat.html" class="sidebar-item" id="sidebar-chat-link">
+        <div class="icon-wrapper">
+            <i class="fa-regular fa-comment-dots"></i>
+            <span class="notification-dot" id="chat-notification-dot"></span>
+        </div>
         <span>聊天</span>
     </a>
     <a href="/settings.html" class="sidebar-item">
@@ -400,50 +342,36 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
-        // --- DOM元素获取 ---
         const productListContainer = document.getElementById('product-list-container');
         const loadingMessage = document.getElementById('loading-message');
         const searchInput = document.querySelector('.search-bar input');
-
         const sortBtn = document.getElementById('sort-btn');
         const categoryBtn = document.getElementById('category-btn');
         const sortMenu = document.getElementById('sort-menu');
         const categoryMenu = document.getElementById('category-menu');
-
-        // --- 状态变量 ---
+        const chatNotificationDot = document.getElementById('chat-notification-dot');
+        let unreadCheckInterval;
         let currentKeyword = '';
         let currentCategory = 'all';
         let currentSortBy = 'latest';
 
-        /**
-         * 核心函数：根据当前状态获取并渲染商品列表
-         */
         async function fetchAndRenderProducts() {
-            // 显示加载提示
             productListContainer.innerHTML = '';
             loadingMessage.textContent = '正在加载商品...';
             loadingMessage.style.display = 'block';
-
-            // 构建API请求URL
             const url = `/api/products?keyword=${encodeURIComponent(currentKeyword)}&category=${currentCategory}&sortBy=${currentSortBy}`;
-
             try {
                 const response = await fetch(url);
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
                 const products = await response.json();
-
-                // 清空容器，隐藏加载提示
                 productListContainer.innerHTML = '';
                 loadingMessage.style.display = 'none';
-
                 if (products.length === 0) {
                     productListContainer.innerHTML = '<p>没有找到符合条件的商品哦！</p>';
                     return;
                 }
-
-                // (渲染逻辑与之前相同)
                 products.forEach(product => {
                     const productLink = document.createElement('a');
                     productLink.href = `/product-detail.html?id=${product.id}`;
@@ -476,37 +404,23 @@
                         </div>`;
                     productListContainer.appendChild(productLink);
                 });
-
-                // 为新生成的收藏按钮重新绑定事件
                 setupFavoriteButtons();
-
             } catch (error) {
                 console.error("获取商品失败:", error);
                 loadingMessage.textContent = '加载商品失败，请稍后刷新重试。';
             }
         }
 
-        updateSidebarAvatar(); // 新增调用
-        /**
-         * 新增：更新侧边栏的用户头像
-         */
         async function updateSidebarAvatar() {
             const sidebarAvatar = document.querySelector('.sidebar-avatar');
-            const sidebarUsername = document.querySelector('.sidebar-username'); // 我们将为span添加一个class
-
+            const sidebarUsername = document.querySelector('.sidebar-username');
             try {
                 const response = await fetch('/api/users/status');
                 if(response.ok) {
                     const user = await response.json();
-
-                    // // 更新昵称
-                    // sidebarUsername.textContent = user.nickname;
-
-                    // 更新头像
                     if(user.avatarUrl) {
                         sidebarAvatar.src = user.avatarUrl;
                     } else {
-                        // 生成默认头像
                         const canvas = document.createElement('canvas');
                         canvas.width = 100;
                         canvas.height = 100;
@@ -527,20 +441,14 @@
             }
         }
 
-        /**
-         * 收藏按钮交互 (阻止事件冒泡)
-         */
         function setupFavoriteButtons() {
             const favoriteButtons = document.querySelectorAll('.favorite-btn');
             favoriteButtons.forEach(button => {
                 if (button.dataset.listenerAttached) return;
-
                 button.addEventListener('click', (event) => {
                     event.preventDefault();
                     event.stopPropagation();
-
                     const productId = button.dataset.productId;
-
                     fetch(`/api/favorites/${productId}`, { method: 'POST' })
                         .then(response => {
                             if (response.status === 401) {
@@ -552,19 +460,12 @@
                             return response.json();
                         })
                         .then(data => {
-                            // --- 这是核心修改 ---
-                            // 操作成功后，不再刷新整个页面
-                            // 而是直接更新当前按钮和收藏数的UI
                             const isFavorited = data.isFavorited;
                             const icon = button.querySelector('i');
-
                             button.classList.toggle('favorited', isFavorited);
                             icon.className = isFavorited ? 'fa-solid fa-star' : 'fa-regular fa-star';
-
-                            // 更新收藏数显示
-                            const countSpan = button.nextElementSibling; // 获取旁边的 favorite-count span
+                            const countSpan = button.nextElementSibling;
                             if (countSpan) {
-                                // 简单地在当前数字上加一或减一
                                 let currentCount = parseInt(countSpan.textContent) || 0;
                                 if (isFavorited) {
                                     currentCount++;
@@ -584,9 +485,27 @@
             });
         }
 
-        // --- 事件监听 ---
+        async function checkUnreadMessages() {
+            if (!localStorage.getItem('loggedInUser')) {
+                chatNotificationDot.style.display = 'none';
+                if (unreadCheckInterval) clearInterval(unreadCheckInterval);
+                return;
+            }
+            try {
+                const response = await fetch('/api/messages/unread-count');
+                if (response.ok) {
+                    const data = await response.json();
+                    if (data.unreadCount > 0) {
+                        chatNotificationDot.style.display = 'block';
+                    } else {
+                        chatNotificationDot.style.display = 'none';
+                    }
+                }
+            } catch (error) {
+                console.error("检查未读消息失败:", error);
+            }
+        }
 
-        // 搜索框：用户按下回车键时触发搜索
         searchInput.addEventListener('keydown', (event) => {
             if (event.key === 'Enter') {
                 currentKeyword = searchInput.value;
@@ -594,36 +513,29 @@
             }
         });
 
-        // 下拉菜单交互
         function setupDropdown(button, menu, stateUpdater) {
             button.addEventListener('click', (event) => {
                 event.stopPropagation();
-                // 关闭另一个菜单
                 if (menu.id === 'sort-menu') categoryMenu.classList.remove('show');
                 if (menu.id === 'category-menu') sortMenu.classList.remove('show');
                 menu.classList.toggle('show');
             });
-
             menu.addEventListener('click', (event) => {
                 if (event.target.classList.contains('dropdown-item')) {
                     const selectedValue = event.target.dataset.value;
-                    stateUpdater(selectedValue); // 更新状态
-
+                    stateUpdater(selectedValue);
                     button.innerHTML = `${event.target.textContent} <i class="fa-solid fa-caret-down"></i>`;
                     menu.querySelectorAll('.dropdown-item').forEach(item => item.classList.remove('active'));
                     event.target.classList.add('active');
                     menu.classList.remove('show');
-
-                    fetchAndRenderProducts(); // 重新获取商品
+                    fetchAndRenderProducts();
                 }
             });
         }
 
-        // 绑定排序和分类菜单
         setupDropdown(sortBtn, sortMenu, (value) => currentSortBy = value);
         setupDropdown(categoryBtn, categoryMenu, (value) => currentCategory = value);
 
-        // 点击页面其他地方关闭菜单
         window.addEventListener('click', (event) => {
             if (!sortMenu.contains(event.target) && !sortBtn.contains(event.target)) {
                 sortMenu.classList.remove('show');
@@ -633,11 +545,12 @@
             }
         });
 
-        // 页面首次加载时，执行获取和渲染商品的功能
+        updateSidebarAvatar();
         fetchAndRenderProducts();
+        checkUnreadMessages();
+        unreadCheckInterval = setInterval(checkUnreadMessages, 5000);
     });
 </script>
 
 </body>
 </html>
-
